# graph-constrained-reasoning

./: .gitignore  README.md  cwq_full_shared_subquestions_full.json  pyproject.toml
accelerate_configs/: deepspeed_zero3.yaml
scripts/: build_graph_index.sh  graph_constrained_decoding.sh  graph_inductive_reasoning.sh  run_rag_safety_gcr_table3_deepseek.sh  train_kg_specialized_llm.sh
src/: graph_constrained_decoding.py  qa_prompt_builder.py  trie.py
src/llms/: __init__.py  base_hf_causal_model.py  base_language_model.py  chatgpt.py  graph_constrained_decoding_model.py
src/utils/: __init__.py  align_utils.py  data_loader.py  graph_utils.py  qa_utils.py  training_utils.py
workflow/: build_graph_index.py  build_shortest_path_index.py  finetune_kg_specialized_llm.py  predict_final_answer.py  predict_paths_and_answers.py  prepare_clean_rand_dataset.py
